added a clear button and function to validate letters only

--- a/main.css
+++ b/main.css
@@ -1,4 +1,9 @@
-#butt{
- width: 80px;
- height: 40px;
+#butt {
+    width: 80px;
+    height: 40px;
+}
+
+#butt1 {
+	width: 80px;
+	height: 40px;
 }
